--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
     "babel-loader": "^9.1.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mrlololi/ajs.git"
+  },
+"bugs": {
+    "url": "https://github.com/mrlololi/ajs/issues"
+ },
+ "homepage": "https://github.com/mrlololi/ajs#readme"
 }
