--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mrlololi/ajs",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -27,5 +27,5 @@
 "bugs": {
     "url": "https://github.com/mrlololi/ajs/issues"
  },
- "homepage": "https://github.com/mrlololi/ajs#readme"
+ "homepage": "https://github.com/mrlololi/ajs/#readme"
 }
